# solbot

./: .gitignore  Cargo.toml  Dockerfile  README.md
solbot/: Cargo.toml
solbot/src/: magiceden_stats_response.rs  main.rs  solanart_stats_response.rs
solbot/src/digital_eyes/: digitaleyes_api.rs  digitaleyes_stats_response.rs
src/: all_collections_handling.rs  alpha_art.rs  collection.rs  digital_eyes.rs  magiceden.rs  main.rs  marketplace.rs  solanart.rs
src/alpha_art/: alpha_art_all_collection_response.rs  alpha_art_api.rs
src/collection/: all_collections_handling.rs  collections_initializer.rs
src/digital_eyes/: digitaleyes_api.rs  digitaleyes_stats_response.rs
src/magiceden/: magiceden_api.rs
src/marketplace/: alpha_art.rs  digital_eyes.rs  magiceden.rs  marketplace.rs  solanart.rs
src/marketplace/alpha_art/: alpha_art_all_collection_response.rs  alpha_art_api.rs  alpha_art_stats_response.rs
src/marketplace/digital_eyes/: digital_eyes_all_collection_response.rs  digitaleyes_api.rs
src/marketplace/magiceden/: magiceden_all_collection_response.rs  magiceden_api.rs  magiceden_stats_response.rs
src/marketplace/solanart/: solanart_all_collection_response.rs  solanart_api.rs  solanart_stats_response.rs
src/solanart/: solanart_api.rs
