[package]
name = "solbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
